--- a/map.css
+++ b/map.css
@@ -16,11 +16,13 @@ body {
   border-radius: 8px; /* Optional: rounded corners */
 }
 #map svg {
-    background: yellow;
-    opacity: 50%;
+    
     position: absolute;
     z-index: 1;
+    background: yellow;
+    opacity: 50%;
     width: 100%;
     height: 100%;
+    pointer-events: none
   
   }
