--- a/map.css
+++ b/map.css
@@ -19,8 +19,8 @@ body {
     
     position: absolute;
     z-index: 1;
-    background: yellow;
-    opacity: 50%;
+    /*background: yellow;
+    opacity: 50%;*/
     width: 100%;
     height: 100%;
     pointer-events: none
