--- a/map.css
+++ b/map.css
@@ -26,3 +26,23 @@ body {
     pointer-events: auto
   
   }
+header {
+    display: flex;
+    gap: 1em;
+    align-items: baseline;
+    margin-bottom: 0.5rem;
+  }
+  
+#time-filter {
+    margin-left: auto;
+  }
+  
+#selected-time,
+#any-time {
+    display: block; /* so text doesn’t shove the slider around */
+  }
+  
+#any-time {
+    font-style: italic;
+    color: #666;
+  }
