--- a/map.css
+++ b/map.css
@@ -46,3 +46,15 @@ header {
     font-style: italic;
     color: #666;
   }
+circle {
+    --color-departures: steelblue;
+    --color-arrivals: darkorange;
+    --color: color-mix(
+      in oklch,
+      var(--color-departures) calc(100% * var(--departure-ratio)),
+      var(--color-arrivals)
+    );
+    fill: var(--color);
+
+
+}
