--- a/map.css
+++ b/map.css
@@ -61,8 +61,8 @@ circle {
 
 #map circle,
 .legend > div {
-  --color-departures: hsl(215, 100%, 45%); /* blue */
-  --color-arrivals: hsl(140, 70%, 40%);    /* green */
+  --color-departures: #4d78b7; 
+  --color-arrivals: #f79b26;    
   --color: color-mix(in lab,
       var(--color-arrivals) calc((1 - var(--departure-ratio)) * 100%),
       var(--color-departures) calc(var(--departure-ratio) * 100%)
@@ -84,7 +84,6 @@ circle {
 .legend > div {
   flex: 1;                       
   padding: 0.6em 1.2em;          
-  color: white;                 
   background: var(--color);      
   font-weight: 500;
 }
