--- a/map.css
+++ b/map.css
@@ -61,8 +61,8 @@ circle {
 
 #map circle,
 .legend > div {
-  --color-departures: #4d78b7; 
-  --color-arrivals: #f79b26;    
+  --color-departures: steelblue; 
+  --color-arrivals: darkorange;    
   --color: color-mix(in lab,
       var(--color-arrivals) calc((1 - var(--departure-ratio)) * 100%),
       var(--color-departures) calc(var(--departure-ratio) * 100%)
@@ -72,8 +72,8 @@ circle {
 
 .legend {
   display: flex;
-  gap: 1px; /* slight divider between blocks */
-  margin-block: 1rem; /* space above/below legend */
+  gap: 1px; 
+  margin-block: 1rem; 
   width: 100%;
   max-width: 450px;
   font-size: 14px;
