--- a/map.css
+++ b/map.css
@@ -44,7 +44,7 @@ header {
   
 #any-time {
     font-style: italic;
-    color: #666;
+    color: #C37AC4;
   }
 circle {
     --color-departures: steelblue;
